@@ -89,6 +89,7 @@ requests from users, including:
   Dirk Schumacher
   Dan Simpson
   Pam Shaw
+  Bryan Shepherd
   Keiran Shao
   Lee Sieswerda
   Phil Smith
