@@ -65,3 +65,5 @@ na_action.R: check that svyglm works with na.action=na.exclude
 svyivreg-var.R:  check that summary.svyivreg is finding the right variances
 
 svyolr-rake-subset.R: make sure subsets of calibrated designs get handled correctly 
+
+anova-svycoxph.R: check that symbolically nested and linear-algebra versions of anova.svycoxph agree
